--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,7 +3,9 @@
 canvas{
     position: absolute;
     top: 0px;
-    left: 0px;  
+    left: 0px;
+    z-index: -1;  
+    background-color: #091C2A;
 }
 
 .homeContainer{
@@ -13,9 +15,9 @@ canvas{
 }
 
 .top{
-    padding-left: 30px;
-    padding-top: 30px;
-    padding-right: 30px;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -32,18 +34,31 @@ canvas{
 }
 
 .homeBody{
-    padding-left: 30px;
-    padding-right: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 76px;
     flex-grow: 1;
-    margin: 0px;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
+    gap: 70px;
+
 }
 
 .homeBody > img{
-    width: 70px;
-    height: 70px;
+    width: 170px;
+    height: 170px;
     border-radius: 50%;
+    object-fit: cover;
+}
+
+.homeBody > .introduction > h1{
+    margin: 0px;
+    color: white;
+}
+
+.homeBody > .introduction > span{
+    color: #02ABF6;
+    font-size: 22px;
+    font-weight: 700;
 }
