added canvas for test

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -6,6 +6,8 @@ canvas{
     left: 0px;
     z-index: -1;  
     background-color: #091C2A;
+    width: 100svw;
+    height: 100svh;
 }
 
 .homeContainer{
