--- a/src/components/home.css
+++ b/src/components/home.css
@@ -6,6 +6,7 @@ canvas{
     left: 0px;
     z-index: -1;  
     background-color: #091C2A;
+    
 }
 
 .homeContainer{
@@ -15,12 +16,19 @@ canvas{
 }
 
 .top{
-    margin-left: 30px;
+    transition: all 0.3s ease;
+    margin-left: 20px;
+    padding-left: 10px;
     margin-top: 30px;
-    margin-right: 30px;
+    margin-right: 20px;
+    padding-right: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    &.open{
+        background-color: rgba(0, 0, 0, 0.25);
+        border-radius: 8px;
+    }
 }
 
 .top > h2{
@@ -33,14 +41,16 @@ canvas{
     width: 24px;
 }
 
+
 .homeBody{
     margin-left: 30px;
     margin-right: 30px;
+    padding-top: 76px;
     flex-grow: 1;
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 40px;
+    gap: 70px;
 
 }
 
