--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Charmonman:wght@400;700&display=swap');
 
-canvas{
+.homeContainer > canvas{
     position: absolute;
     top: 0px;
     left: 0px;
