--- a/src/components/PC/homePC.css
+++ b/src/components/PC/homePC.css
@@ -1,32 +1,75 @@
 .homePCContainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 60px;
     height: 100vh;
     background-color: #091C2A;
-    padding: 50px;
 }
 
 .homePCTop{
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
-.homePCTop > h2{
+.homePCTop > h1{
     font-family: "Charmonman", cursive;
     color: white;
+    margin: 0px;
 }
 
 .homePCTop > ul{
     display: flex;
     align-items: center;
-    gap: 50px;
+    margin: 0px;
+    gap: 80px;
 }
 
 .homePCTop > ul > li{
     text-decoration: none;
     list-style: none;
     color: white;
+    cursor: pointer;
+    
+    transition: all 0.1s ease-in;
+}
+
+.homePCTop > ul > li:hover{
+    border-radius: 8px;
+    padding: 10px 10px 10px 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.homePCBody{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.homePCBody > div{
+    width: auto;
+    display: flex;
+    align-items: center;
+    gap: 500px;
+}
+
+.homePCBody > div > img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.homePCBody > div > .introduction > h1{
+    color: white;
+    font-size: 40px;
+}
+
+.homePCBody > div > .introduction > span{
+    color: #02ABF6;
+    font-size: 26px;
+    font-weight: 700;
 }
