--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+::-webkit-scrollbar-track{
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 8px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+
 .App {
   text-align: center;
   user-select: none;
@@ -8,5 +23,38 @@
   top: 0px;
   left: 0px;
   pointer-events: none;
-  z-index: 2;
+  z-index: 1;
+}
+
+.App > hr{
+  margin: 0px;
+  padding: 0px;
+  height: 30px;
+  border: none;
+  background-color: aquamarine;
+}
+
+
+section{
+  position: relative;
+}
+
+.home-about-wave {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.home-about-wave svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 166px;
+}
+
+.home-about-wave .shape-fill {
+  fill: #091C2A;
 }
