--- a/src/components/aboutMe.css
+++ b/src/components/aboutMe.css
@@ -38,6 +38,7 @@
 }
 
 .AboutContainer > div::before{
+    animation: spin 10s ease infinite;
     content: '';
     background-color: #0b1e2c;
     width: 58vw;
@@ -45,7 +46,6 @@
     position: absolute;
     top: -30px;
     left: -20px;
-    border-radius: 39% 61% 75% 25% / 63% 49% 42% 25%;
 }
 
 .AboutContainer > div > .texts > h2{
@@ -58,4 +58,27 @@
 
 .AboutContainer > div > .texts > p{
     color: rgba(255, 255, 255, 0.75);
+}
+
+@keyframes spin {
+    from{
+        transform: rotate(0deg);
+        border-radius: 59% 13% 25% 60% / 74% 33% 47% 35%;
+    }    
+    25%{
+        transform: rotate(90deg);
+        border-radius: 29% 60% 62% 26% / 74% 18% 69% 25%;
+    }
+    50%{
+        transform: rotate(180deg);
+        border-radius: 39% 61%75% 25% / 63% 49% 42% 25%;
+    }
+    75%{
+        transform: rotate(270deg);
+        border-radius: 40% 60% 28% 72% / 37% 43% 57% 63%;
+    }
+    to{
+        transform: rotate(360deg);
+        border-radius: 59% 13% 25% 60% / 74% 33% 47% 35%;
+    }
 }
