--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -1,5 +1,5 @@
 .projectsContainer{
-    padding: 30px;
+    padding: 80px 30px 30px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
